## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

noinst_HEADERS= \
	acceptrequest.h\
	addnewrule.h\
	auth.h\
	common.h\
	config.h\
	deleterule.h\
	editrule.h\
	loadconfig.h\
	mimetype.h\
	netustad.h\
	execcgi.h\
	network.h\
	snprintf.h
