## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

netustad_imagesdir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@/script/images

netustad_images_DATA = \
	action_allow.png \
	action_checkstate.png \
	action_count.png \
	action_deny.png \
	action_divert.png \
	action_forward.png \
	action_pipequeue.png \
	action_skipto.png \
	action_tee.png \
	action_unreach.png \
	banner-alt.png \
	banner.png \
	bg.png \
	btn_bg.png \
	buton_0.png \
	buton_1.png \
	buton_2.png \
	buton_3.png \
	buton_4.png \
	buton_5.png \
	buton_6.png \
	buton_7.png \
	editor.png \
	editor_static.png \
	eraser.png \
	eraser_static.png \
	menu_addrule.png \
	menu_login.png \
	menu_logout.png \
	menu_rulelist.png

EXTRA_DIST = $(netustad_images_DATA)
